Fix topic tag wrapping  🚑

--- a/src/components/ProjectPreview.css
+++ b/src/components/ProjectPreview.css
@@ -41,7 +41,8 @@
     padding: 5px 0px 15px 0px;
     display: flex;
     flex-direction: row;
-
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .project-preview:hover {
